# backend/controller/viewer.go
@@ -12,7 +12,7 @@ func NewViewerController(u ViewerUseCase) *ViewerController {
 	return &ViewerController{ViewerUseCase: u}
 }
 
-type GetViewersResponse struct {
+type GetTotalViewersResponse struct {
 	Viewers uint `json:"viewers"`
 }
 
@@ -23,14 +23,14 @@ type GetViewersResponse struct {
 // @Tags       Viewer
 // @Accept     json
 // @Produce    json
-// @Success    200     	{object}    GetViewersResponse
+// @Success    200     	{object}    GetTotalViewersResponse
 // @Failure    400     	{object}    entity.ErrorResponse
 // @Failure    404     	{object}    entity.ErrorResponse
 // @Router     /viewers [get]
-func (c ViewerController) GetViewers(ctx *gin.Context) (interface{}, error) {
-	viewers, err := c.ViewerUseCase.GetViewers(ctx)
+func (c ViewerController) GetTotalViewers(ctx *gin.Context) (interface{}, error) {
+	viewers, err := c.ViewerUseCase.GetTotalViewers(ctx)
 	if err != nil {
 		return nil, err
 	}
-	return GetViewersResponse{Viewers: viewers}, nil
+	return GetTotalViewersResponse{Viewers: viewers}, nil
 }
